
-----------------------------------------------------------------------

??122004 (v2.3.5)  -** stable release **-
	- changed: collected all email addresses from source files to 
		   the AUTHORS file and added some antispam measures
	- fixed: default to native-python ECI implementation on MacOSX
	- fixed: link against coreaudio libs if JACK enabled on MacOSX
	- fixed: ecasignalview compilation bug on Cygwin
27102004 (v2.3.4)  -** stable release **-
	- edi-entries: edi-14 and edi-32 closed, edi-40 added
	- note: verified to compile ok on MacOS X 10.3.2 [smbolton]
	- note: verified to compile ok with gcc-3.4.1
	- added: basic FLAC input/output support using flac utils;
		 new flac specific options to ecasoundrc
	- added: basic AAC/M4A/MP4 input/output support faac/faad
		 utils; new options to ecasoundrc
	- added: optional 3rd parameter to 'sndfile' for specifying 
		 audio file format (see ecasound(1)) [jesse]
	- added: documentation on adding new EIAM commands to the
	         programmer's guide
	- added: eaim - new 'int-set-float-to-string-precision' command
	- changed: set srate for mp3 input based on mp3 header
	- changed: increased precision of floating point return values
		   in the C ECI implementation
	- fixed: multitrack offset was calculated incorrectly for
		 ALSA devices which limit buffer period count to 2
	- fixed: bugs in .wav, .cdr, JACK code, and in internal sample 
		 conversion routines that occur on big-endian 
		 machines [smbolton]
	- fixed: ogg input failed if requested sample-format had non-native
		 endianess; new default-cmd for ogg-input, see 
		 ecasoundrc(5)
	- fixed: build failed on MacOSX/freebsd because of undefined 	
		 mlockall and related defines
	- fixed: errors in ecasound(1) man page and the examples.html;
	         adding chain operators to multiple chains at once
		 is not supported anymore
	- fixed: engine state not fully updated after a 'run' 
		 command has completed; caused commands such as